--- a/views/admin/orderview.ejs
+++ b/views/admin/orderview.ejs
@@ -16,6 +16,9 @@
                             aria-hidden="true"></i>Orders</a>
                     <a href="/admin/coupon"><i class="fa fa-bars" style="margin-right: 10px;"
                                 aria-hidden="true"></i>Coupons</a>
+                                <a href="/admin/categoryoffer">
+                                    <i class="fa fa-percent" style="margin-right: 10px;" aria-hidden="true"></i> Category Offers
+                                  </a>
                     <a href="/admin/banner"><i class="fa fa-bars" style="margin-right: 10px;"
                                     aria-hidden="true"></i>Banners</a>
                   
@@ -39,7 +42,7 @@
                                     <div class="mb-4">
                                         <h5 class="text-uppercase"><strong>Order Information</strong></h5>
                                         <p><strong>Order ID:</strong>
-                                            <%= orders._id %>
+                                            <%= orders.orderId %>
                                         </p>
                                         <p><strong>Order Date:</strong>
                                             <%= orders.orderDate.toLocaleDateString() %>
