--- a/views/admin/addproduct.ejs
+++ b/views/admin/addproduct.ejs
@@ -41,6 +41,13 @@
               <i class="fa fa-bars"></i> Coupons
             </a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="/admin/categoryoffer">
+              <i class="fa fa-percent"></i> Category Offers
+            </a>
+          </li>
+          
           <li class="nav-item">
             <a class="nav-link" href="/admin/banner">
               <i class="fa fa-bars"></i> Banners
