--- a/views/admin/adminproduct.ejs
+++ b/views/admin/adminproduct.ejs
@@ -12,6 +12,10 @@
     <a href="/admin/brand"><i class="fa fa-users" style="margin-right: 10px;" aria-hidden="true"></i>Brand</a>
     <a href="/admin/order"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Orders</a>
     <a href="/admin/coupon"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Coupons</a>
+
+    <a href="/admin/categoryoffer">
+        <i class="fa fa-percent" style="margin-right: 10px;" aria-hidden="true"></i> Category Offers
+      </a>
     <a href="/admin/banner"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Banners</a>
    
     <a href="/admin/sales"><i class="fa fa-line-chart" style="margin-right: 10px;" aria-hidden="true"></i>Sales</a>
