--- a/views/admin/editcategory.ejs
+++ b/views/admin/editcategory.ejs
@@ -44,6 +44,11 @@
       </a>
     </li>
     <li class="nav-item">
+      <a class="nav-link active" href="/admin/categoryoffer">
+        <i class="fa fa-percent"></i> Category Offers
+      </a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" href="/admin/banner">
         <i class="fa fa-bars"></i> Banners
       </a>
