--- a/views/user/productlist.ejs
+++ b/views/user/productlist.ejs
@@ -56,8 +56,15 @@
 
               <div class="card-body">
                 <h5 class="card-title text-dark"><%= product.ProductName %></h5>
-               
-                <p class="card-text text-dark">Price: <%= product.Price %></p></a>
+                <% if (product.hasCategoryOffer) { %>
+                  <p class="card-text text-dark">
+                    <span class="text-decoration-line-through">₹<%= product.Price %></span>
+                    <span class="text-success fw-bold">₹<%= product.discountedPrice %></span>
+                    <span class="badge bg-danger ms-2"><%= product.categoryOffer.discountPercentage %>% OFF</span>
+                  </p>
+                <% } else { %>
+                  <p class="card-text text-dark">Price: ₹<%= product.Price %></p>
+                <% } %>
               </div>
             </a>
             </div>
