--- a/views/user/userhome.ejs
+++ b/views/user/userhome.ejs
@@ -37,7 +37,15 @@
               </div>
                 <div class="card-body d-flex flex-column justify-content-center">
                     <h5 class="card-title"><%= product.ProductName %></h5>
-                    <p class="card-text"> ₹ <%= product.Price %></p>
+                    <% if (product.hasCategoryOffer) { %>
+                      <p class="card-text">
+                        <span class="text-decoration-line-through">₹<%= product.Price %></span>
+                        <span class="text-success fw-bold">₹<%= product.discountedPrice %></span>
+                        <span class="badge bg-danger ms-2"><%= product.categoryOffer.discountPercentage %>% OFF</span>
+                      </p>
+                    <% } else { %>
+                      <p class="card-text">₹<%= product.Price %></p>
+                    <% } %>
                 </div>
             
           </div>
@@ -81,7 +89,15 @@
               </div>
                 <div class="card-body d-flex flex-column justify-content-center">
                     <h5 class="card-title"><%= product.ProductName %></h5>
-                    <p class="card-text"> ₹ <%= product.Price %></p>
+                    <% if (product.hasCategoryOffer) { %>
+                      <p class="card-text">
+                        <span class="text-decoration-line-through">₹<%= product.Price %></span>
+                        <span class="text-success fw-bold">₹<%= product.discountedPrice %></span>
+                        <span class="badge bg-danger ms-2"><%= product.categoryOffer.discountPercentage %>% OFF</span>
+                      </p>
+                    <% } else { %>
+                      <p class="card-text">₹<%= product.Price %></p>
+                    <% } %>
                 </div>
             
           </div>
