--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -151,7 +151,7 @@ https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js
         };
   console.log(formData,"ffffffffffff")
         fetch('/updateProfile', {
-          method: 'POST',
+          method: 'PUT',
           headers: {
             'Content-Type': 'application/json'
           },
