--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -43,7 +43,7 @@
         <i class="fa fa-percent"></i> Category Offers
       </a>
     </li>
-    
+
     <li class="nav-item">
         <a class="nav-link" href="/admin/banner">
           <i class="fa fa-bars"></i> Banners
@@ -306,7 +306,7 @@
 
 
     fetch(`/admin/updateBanner/${bannerId}`, {
-        method: 'post',
+        method: 'PUT',
         body: formData,
     })
     .then(response => {
