--- a/views/admin/categoryoffer.ejs
+++ b/views/admin/categoryoffer.ejs
@@ -372,7 +372,7 @@
   async function toggleOfferStatus(offerId) {
     try {
       const response = await fetch(`/admin/togglecategoryoffer/${offerId}`, {
-        method: 'POST',
+        method: 'PATCH',
         headers: {
           'Content-Type': 'application/json',
         }
