--- a/views/admin/addproduct.ejs
+++ b/views/admin/addproduct.ejs
@@ -1,74 +1,23 @@
 <!-- Admin Add Product Page -->
 <%- include('header')-%>
 
+<%- include('sidebar') -%>
+
+<style>
+.admin-content-container {
+  margin-left: 0;
+}
+@media (min-width: 992px) {
+  .admin-content-container {
+    margin-left: 230px;
+  }
+}
+</style>
+
   <div class="container-fluid">
     <div class="row">
-      <!-- Sidebar -->
-      <div class="col-md-3 col-lg-2 sidebar">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="/admin/admindashboard">
-              <i class="fa fa-home"></i> Dashboard
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/adminproduct">
-              <i class="fa fa-product-hunt"></i> Products
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/category">
-              <i class="fa fa-list"></i> Category
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/customers">
-              <i class="fa fa-users"></i> Customers
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/brand">
-              <i class="fa fa-users"></i> Brands
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/order">
-              <i class="fa fa-bars"></i> Orders
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/coupon">
-              <i class="fa fa-bars"></i> Coupons
-            </a>
-          </li>
 
-          <li class="nav-item">
-            <a class="nav-link active" href="/admin/categoryoffer">
-              <i class="fa fa-percent"></i> Category Offers
-            </a>
-          </li>
-          
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/banner">
-              <i class="fa fa-bars"></i> Banners
-            </a>
-          </li>
-         
-        
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/sales">
-              <i class="fa fa-line-chart"></i> Sales
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/logout">
-              <i class="fa fa-sign-out"></i> Logout
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="container mt-5 mt-lg-1 shadow-lg rounded-2">
+      <div class="container mt-5 mt-lg-1 shadow-lg rounded-2 admin-content-container">
 
         <div class="container-fluid">
           <div class="row ">
