--- a/views/admin/adminproduct.ejs
+++ b/views/admin/adminproduct.ejs
@@ -2,30 +2,10 @@
 <div class="container-fluid">
     <div class="row justify-content-center align-items-center g-2">
         <div class="col col-md-2">
-<!-- Sidebar -->
-<div class="sidebar">
-    <a href="/admin/admindashboard">  <i class="fa fa-home" style="margin-right: 10px;"></i>Dashboard</a>
-    <a href="/admin/adminproduct"><i class="fa fa-product-hunt" style="margin-right: 10px;" aria-hidden="true"></i>Products</a>
-    <a href="/admin/category"><i class="fa fa-list" style="margin-right: 10px;" aria-hidden="true"></i>Category</a>
-   
-    <a href="/admin/customers"><i class="fa fa-users" style="margin-right: 10px;" aria-hidden="true"></i>Customers</a>
-    <a href="/admin/brand"><i class="fa fa-users" style="margin-right: 10px;" aria-hidden="true"></i>Brand</a>
-    <a href="/admin/order"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Orders</a>
-    <a href="/admin/coupon"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Coupons</a>
-
-    <a href="/admin/categoryoffer">
-        <i class="fa fa-percent" style="margin-right: 10px;" aria-hidden="true"></i> Category Offers
-      </a>
-    <a href="/admin/banner"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Banners</a>
-   
-    <a href="/admin/sales"><i class="fa fa-line-chart" style="margin-right: 10px;" aria-hidden="true"></i>Sales</a>
-    <a href="/admin/logout"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>Logout</a>
-  </div> 
-
-
+<%- include('sidebar') -%>
         </div>
 
-      <div class="col col-md-10">
+      <div class="col col-md-10 content">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center p-2">
                
