--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -1,74 +1,19 @@
 <%- include('header')-%>
 
-<!-- Sidebar -->
-<div class="col-md-3 col-lg-2 sidebar">
-  <ul class="nav flex-column">
-    <li class="nav-item">
-      <a class="nav-link active" href="/admin/admindashboard">
-        <i class="fa fa-home"></i> Dashboard
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/adminproduct">
-        <i class="fa fa-product-hunt"></i> Products
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/category">
-        <i class="fa fa-list"></i> Category
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/customers">
-        <i class="fa fa-users"></i> Customers
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/brand">
-        <i class="fa fa-users"></i> Brand
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/order">
-        <i class="fa fa-bars"></i> Orders
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/coupon">
-        <i class="fa fa-bars"></i> Coupons
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="/admin/categoryoffer">
-        <i class="fa fa-percent"></i> Category Offers
-      </a>
-    </li>
+<%- include('sidebar') -%>
 
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/banner">
-          <i class="fa fa-bars"></i> Banners
-        </a>
-      </li>
-   
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/sales">
-        <i class="fa fa-line-chart"></i> Sales
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/logout">
-        <i class="fa fa-sign-out"></i> Logout
-      </a>
-    </li>
-   
-  </ul>
-</div>
+<style>
+.admin-content-container {
+  margin-left: 0;
+}
+@media (min-width: 992px) {
+  .admin-content-container {
+    margin-left: 230px;
+  }
+}
+</style>
 
-
-
-
-<div class="col-md-9 col-lg-10 offset-md-3 offset-lg-2">
-
+<div class="container mt-5 admin-content-container">
     <button type="button" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#addBannerModal">
         <i class="fa fa-plus"></i> Add Banner
     </button>
@@ -118,11 +63,7 @@
             </div>
         <% }); %>
     </div>
-  </div>
-
-
-
-
+</div>
 
   <!-- Edit Banner Modal -->
   <% banners.forEach(banner => { %>
@@ -167,8 +108,6 @@
   </div>
 </div>
         <% }); %>
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
