--- a/views/admin/brand.ejs
+++ b/views/admin/brand.ejs
@@ -1,81 +1,68 @@
 <%- include('header')-%>
 
+<%- include('sidebar') -%>
 
-<div class="container-fluid">
+<style>
+.admin-content-container {
+    margin-left: 0;
+}
+@media (min-width: 992px) {
+    .admin-content-container {
+        margin-left: 230px;
+    }
+}
+</style>
 
-    <div class="row justify-content-center align-items-center g-2">
-        <div class="col col-md-2">
+<div class="container mt-5 admin-content-container">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h2 class="mb-0">Brand List</h2>
+        <a href="/admin/addbrand" class="btn btn-success">Add Brand</a>
+    </div>
+    <div class="table-responsive" style="margin-top: 20px;">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>No</th>
+                    <th>Brand</th>
+                    <th>Edit</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+               <% brands.forEach((brand) => { %>
+                <tr>
+                    <td>
+                        <%= ++i%>
+                    </td>
+                    <td>  
+                        <%= brand.brandName %>
+                    </td>
 
-            <div class="sidebar">
-                <a href="/admin/admindashboard"><i class="fa fa-home" style="margin-right: 10px;"></i>Dashboard</a>
-                <a href="/admin/adminproduct"><i class="fa fa-product-hunt" style="margin-right: 10px;" aria-hidden="true"></i>Products</a>
-                <a href="/admin/category"><i class="fa fa-list" style="margin-right: 10px;" aria-hidden="true"></i>Category</a>
-                <a href="/admin/customers"><i class="fa fa-users" style="margin-right: 10px;" aria-hidden="true"></i>Customers</a>
-                <a href="/admin/brand"><i class="fa fa-users" style="margin-right: 10px;" aria-hidden="true"></i>Brand</a>
-                <a href="/admin/order"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Orders</a>
-                <a href="/admin/coupon"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Coupons</a>
-                <a href="/admin/categoryoffer">
-                    <i class="fa fa-percent" style="margin-right: 10px;" aria-hidden="true"></i> Category Offers
-                  </a>
-                <a href="/admin/banner"><i class="fa fa-bars" style="margin-right: 10px;" aria-hidden="true"></i>Banners</a>
-            
-                <a href="/admin/sales"><i class="fa fa-line-chart" style="margin-right: 10px;" aria-hidden="true"></i>Sales</a>
-                <a href="/admin/logout"><i class="fa fa-sign-out" style="margin-right: 10px;" aria-hidden="true"></i>Logout</a>
-            </div>
-        </div>
-        <div class="main-content col-md-10">
-            <div class="d-flex justify-content-between align-items-center mb-3">
-                <h2 class="mb-0">Brand List</h2>
+                    <td><a class="btn btn-success"  href="/admin/editbrand/<%=brand._id%>">Edit</a>
+                    </td>
+                    <td> 
+                        <% if (brand.isBlocked) { %>
+                            <form action="/admin/unblockbrand/<%= brand._id %>" method="post" onsubmit="return confirm('Are you sure you want to unblock this brand?');">
+                                <button class="btn btn-danger">Unblock</button>
+                            </form>
+                        <% } else { %>
+                            <form action="/admin/blockbrand/<%= brand._id %>" method="post" onsubmit="return confirm('Are you sure you want to block this brand?');">
+                                <button class="btn btn-success">Block</button>
+                            </form>
+                        <% } %>
+                    </td>
+                    
+                    
+                </tr>
+               <% }) %>
+                
                
-                <a href="/admin/addbrand" class="btn btn-success">Add Brand</a>
-            </div>
-            <div class="table-responsive" style="margin-top: 20px;">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>No</th>
-                            <th>Brand</th>
-                            <th>Edit</th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                       <% brands.forEach((brand) => { %>
-                        <tr>
-                            <td>
-                                <%= ++i%>
-                            </td>
-                            <td>  
-                                <%= brand.brandName %>
-                            </td>
-
-                            <td><a class="btn btn-success"  href="/admin/editbrand/<%=brand._id%>">Edit</a>
-                            </td>
-                            <td> 
-                                <% if (brand.isBlocked) { %>
-                                    <form action="/admin/unblockbrand/<%= brand._id %>" method="post" onsubmit="return confirm('Are you sure you want to unblock this brand?');">
-                                        <button class="btn btn-danger">Unblock</button>
-                                    </form>
-                                <% } else { %>
-                                    <form action="/admin/blockbrand/<%= brand._id %>" method="post" onsubmit="return confirm('Are you sure you want to block this brand?');">
-                                        <button class="btn btn-success">Block</button>
-                                    </form>
-                                <% } %>
-                            </td>
-                           
-                            
-                        </tr>
-                       <% }) %>
-                        
-                       
 
 
 
 
-                    </tbody>
-                </table>
-            </div>
-        </div>
+            </tbody>
+        </table>
     </div>
 </div>
 
