--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -1,114 +1,95 @@
 <%- include('header')-%>
-    <div class="container-fluid">
-        <div class="row justify-content-center align-items-center g-2">
-            <div class="col col-md-2">
-                <div class="sidebar">
-                    <a href="/admin/admindashboard"><i class="fa fa-home" style="margin-right: 10px;"></i>Dashboard</a>
-                    <a href="/admin/adminproduct"><i class="fa fa-product-hunt" style="margin-right: 10px;"
-                            aria-hidden="true"></i>Products</a>
-                    <a href="/admin/category"><i class="fa fa-list" style="margin-right: 10px;"
-                            aria-hidden="true"></i>Category</a>
-                    <a href="/admin/customers"><i class="fa fa-users" style="margin-right: 10px;"
-                            aria-hidden="true"></i>Customers</a>
-                    <a href="/admin/brand"><i class="fa fa-users" style="margin-right: 10px;"
-                            aria-hidden="true"></i>Brand</a>
-                    <a href="/admin/order"><i class="fa fa-bars" style="margin-right: 10px;"
-                            aria-hidden="true"></i>Orders</a>
-                    <a href="/admin/coupon"><i class="fa fa-bars" style="margin-right: 10px;"
-                                aria-hidden="true"></i>Coupons</a>
-                                <a href="/admin/categoryoffer">
-                                    <i class="fa fa-percent" style="margin-right: 10px;" aria-hidden="true"></i> Category Offers
-                                  </a>
-                                <a href="/admin/banner"><i class="fa fa-bars" style="margin-right: 10px;"
-                                    aria-hidden="true"></i>Banners</a>
-                   
-                    <a href="/admin/sales"><i class="fa fa-line-chart" style="margin-right: 10px;"
-                            aria-hidden="true"></i>Sales</a>
-                    <a href="/admin/logout"><i class="fa fa-sign-out" style="margin-right: 10px;"
-                            aria-hidden="true"></i>Logout</a>
-                </div>
-            </div>
-            <div class="main-content col-md-10">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h2 class="mb-0">Customers</h2>
+<%- include('sidebar') -%>
+    
+<style>
+.admin-content-container {
+  margin-left: 0;
+}
+@media (min-width: 992px) {
+  .admin-content-container {
+    margin-left: 230px;
+  }
+}
+</style>
+
+<div class="container mt-5 admin-content-container">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h2 class="mb-0">Customers</h2>
+        
+    </div>
+    <div class="table-responsive" style="margin-top: 20px;">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>No</th>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% customers.forEach((customer,index) => { %>
+                <tr>
+                    <td><%= (currentPage - 1) * perPage + index + 1 %></td>
+                    <td><%= customer._id %></td>
+                    <td><%= customer.name %></td>
+                    <td><%= customer.email %></td>
                     
-                </div>
-                <div class="table-responsive" style="margin-top: 20px;">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>No</th>
-                                <th>Id</th>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% customers.forEach((customer,index) => { %>
-                            <tr>
-                                <td><%= (currentPage - 1) * perPage + index + 1 %></td>
-                                <td><%= customer._id %></td>
-                                <td><%= customer.name %></td>
-                                <td><%= customer.email %></td>
-                                
-                               
+                   
 
-                                <td>
-                                    <% if (customer.isBlocked) { %>
-                                        <form action="/admin/unblock/<%= customer._id %>" method="post" onsubmit="return confirm('Are you sure you want to unblock this customer?');">
-                                            <button class="btn btn-danger">Unblock</button>
-                                        </form>
-                                    <% } else { %>
-                                        <form action="/admin/block/<%= customer._id %>" method="post" onsubmit="return confirm('Are you sure you want to block this customer?');">
-                                            <button class="btn btn-success">Block</button>
-                                        </form>
-                                    <% } %>
-                                </td>
-                                
-                                
-                              
+                    <td>
+                        <% if (customer.isBlocked) { %>
+                            <form action="/admin/unblock/<%= customer._id %>" method="post" onsubmit="return confirm('Are you sure you want to unblock this customer?');">
+                                <button class="btn btn-danger">Unblock</button>
+                            </form>
+                        <% } else { %>
+                            <form action="/admin/block/<%= customer._id %>" method="post" onsubmit="return confirm('Are you sure you want to block this customer?');">
+                                <button class="btn btn-success">Block</button>
+                            </form>
+                        <% } %>
+                    </td>
+                    
+                    
+                  
 
-                            </tr>
-                        <% }); %>
-                        </tbody>
-                    </table>
-                </div>
-
-
-               
-        <ul class="pagination justify-content-center">
-            <% if (currentPage > 1) { %>
-                <li class="page-item"><a class="page-link" href="?page=<%= currentPage - 1 %>">Previous</a></li>
-            <% } %>
-            <% for (let i = 1; i <= totalPages; i++) { %>
-                <li class="page-item <%= currentPage === i ? 'active' : '' %>">
-                    <a class="page-link" href="?page=<%= i %>"><%= i %></a>
-                </li>
-            <% } %>
-            <% if (currentPage < totalPages) { %>
-                <li class="page-item"><a class="page-link" href="?page=<%= currentPage + 1 %>">Next</a></li>
-            <% } %>
-        </ul>
-      
-
-            </div>
-        </div>
+                </tr>
+            <% }); %>
+            </tbody>
+        </table>
     </div>
 
-    <script>
-        function blockUser(customerId) {
-          
-            console.log('Block user with id:', customerId);
-        }
-    
-        function unblockUser(customerId) {
-            
-            console.log('Unblock user with id:',customerId );
-        }
-    </script>
+
+   
+    <ul class="pagination justify-content-center">
+        <% if (currentPage > 1) { %>
+            <li class="page-item"><a class="page-link" href="?page=<%= currentPage - 1 %>">Previous</a></li>
+        <% } %>
+        <% for (let i = 1; i <= totalPages; i++) { %>
+            <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+            </li>
+        <% } %>
+        <% if (currentPage < totalPages) { %>
+            <li class="page-item"><a class="page-link" href="?page=<%= currentPage + 1 %>">Next</a></li>
+        <% } %>
+    </ul>
+  
+</div>
+
+<script>
+    function blockUser(customerId) {
+      
+        console.log('Block user with id:', customerId);
+    }
+
+    function unblockUser(customerId) {
+        
+        console.log('Unblock user with id:',customerId );
+    }
+</script>
 
 
-    <%- include('footer')-%>
+<%- include('footer')-%>
 
    
