--- a/views/admin/editcategory.ejs
+++ b/views/admin/editcategory.ejs
@@ -1,74 +1,19 @@
 <%- include('header')-%>
+<%- include('sidebar') -%>
 
-<!-- Sidebar -->
-<div class="col-md-3 col-lg-2 sidebar">
-  <ul class="nav flex-column">
-    <li class="nav-item">
-      <a class="nav-link active" href="/admin/admindashboard">
-        <i class="fa fa-home"></i> Dashboard
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/adminproduct">
-        <i class="fa fa-product-hunt"></i> Products
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/category">
-        <i class="fa fa-list"></i> Category
-      </a>
-    </li>
-
-   
+<style>
+.admin-content-container {
+  margin-left: 0;
+}
+@media (min-width: 992px) {
+  .admin-content-container {
+    margin-left: 230px;
+  }
+}
+</style>
 
 
-
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/customers">
-        <i class="fa fa-users"></i> Customers
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/brand">
-        <i class="fa fa-users"></i> Brand
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/orders">
-        <i class="fa fa-bars"></i> Orders
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/coupon">
-        <i class="fa fa-bars"></i> Coupons
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="/admin/categoryoffer">
-        <i class="fa fa-percent"></i> Category Offers
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/banner">
-        <i class="fa fa-bars"></i> Banners
-      </a>
-    </li>
-  
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/sales">
-        <i class="fa fa-line-chart"></i> Sales
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/logout">
-        <i class="fa fa-sign-out"></i> Logout
-      </a>
-    </li>
-  </ul>
-</div>
-
-
-<div class="container mt-5 ml-3">
+<div class="container mt-5 admin-content-container">
   <h2 class="mb-4">Edit Category</h2>
 
  
